--- a/src/index.html
+++ b/src/index.html
@@ -1,24 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<%= include('header') %>
+
 <body>
 
-<%= include('test') %>
+<h1>${pkg.name}</h1>
 
-<%
+<h2>Dependencies list</h2>
+<ol>
 
-for (var i = 0; i < 10; i++) {
-    print(i);
-}
+    <%
+    _.each(pkg.devDependencies, function(val, key) {
+        print('<li>');
+        print(key + ' - ' + val);
+        print('</li>');
+    });
+    %>
 
-_.times(4, function() {
-    print(5 + '\n');
-});
+</ol>
 
-%>
 
-</body>
-</html>
+<%= include('footer') %>
+
