--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,25 @@
 <%= include('header') %>
 
 <body>
+<div class="container">
 
-<h1>${pkg.name}</h1>
+    <h1>${pkg.name}</h1>
 
-<h2>Dependencies list</h2>
-<ol>
+    <h2>Dependencies list</h2>
+    <ol>
 
-<%
-    _.each(pkg.devDependencies, function(val, key) {
-        print('    <li>');
-        print(key + ' - ' + val);
-        print('</li>\n');
-    });
+    <%
+        _.each(pkg.devDependencies, function(val, key) {
+            print('<li>');
+            print(key + ' - ' + val);
+            print('</li>\n');
+        });
 
-%>
+    %>
 
-</ol>
+    </ol>
 
+</div>
 
 <%= include('footer') %>
 
